--- a/_config.yml
+++ b/_config.yml
@@ -80,9 +80,9 @@ paginate_path:         /:num/
 # Theme
 # ---------------------------------------------------------------------------------------
 
-theme: jekyll-theme-hydejack
+#theme: jekyll-theme-hydejack
 # remote_theme: hydecorp/hydejack@v9.0.0-rc.6
-
+theme: minima
 
 # Customizaton
 # ----------------------------------------------------------------------------------------
